# papuc_exercises

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Zad_04_02.cpp  appveyor.yml  gtest_main.cc
bomberman/: CMakeLists.txt  World.cpp  World.hpp  main.cpp
bomberman/Bomberman/Private/: AABB.hpp  Board.cpp  Board.hpp  Bomberman.cpp  Bomberman.hpp  Entity.cpp  Entity.hpp  GreenAllert.cpp  GreenAllert.hpp  RedAllert.hpp  TouchAlert.cpp  TouchAlert.hpp
bomberman/Bomberman/Public/: Entity.hpp  IBomberman.hpp
bomberman/Physics/Private/: Collider.cpp  Collision.cpp  Manifold.hpp
bomberman/Physics/Public/: AABB.hpp  Collider.hpp  Collision.hpp  CollisionScript.hpp
bomberman/Physics/Test/: ColliderTest.cpp
ch04/lm/: CMakeCache.txt  CMakeLists.txt  Expression.cpp  Expression.hpp  Median.hpp  RPS.hpp  ex02.cpp  ex05.cpp  ex10-UI.cpp  ex10.cpp  ex16.cpp  parser.hpp  parser_ast.cpp  parser_ast.hpp
ch04/mb/: CMakeLists.txt  NGR_04_02_01.cpp  NGR_04_02_01.hpp  NGR_04_02_UT.cpp  NGR_04_02_main.cpp  NGR_04_03_01.cpp  NGR_04_03_01.hpp  NGR_04_03_UT.cpp  NGR_04_03_main.cpp  NGR_04_05_01.cpp  NGR_04_05_01.hpp  NGR_04_05_main.cpp  NGR_04_08_01.cpp  NGR_04_08_01.hpp  NGR_04_08_main.cpp  NGR_04_UT.cpp  _Notatki.txt  _Pytania.txt
lm/: .clang-format  CMakeLists.txt
lm/adapter-types/: CMakeLists.txt  array_adapter.cpp  array_adapter.hpp  array_adapter.test.cpp  non_owning_ptr.hpp
lm/ch04/: CMakeLists.txt  Expression.cpp  Expression.hpp  Grains.cpp  Grains.hpp  Median.hpp  MinMaxMode.hpp  Parser_Poly.cpp  Parser_Poly.hpp  PolySolver.hpp  Primes.hpp  RPS.hpp  Range.hpp  ex02.cpp  ex05-UI.cpp  ex05.cpp  ex08.cpp  ex10-UI.cpp  ex10.cpp  ex12.cpp  ex16.cpp  ex17.cpp  ex18.cpp  parser.cpp  parser.hpp  parser_ast.cpp  parser_ast.hpp
lm/ch06/: CMakeLists.txt  CalcMain.cpp  Evaluator.cpp  Evaluator.hpp  EvaluatorTest.cpp  ExpressionSplitter.cpp  ExpressionSplitter.hpp  ExpressionSplitterTest.cpp  Log.hpp  MockTokenStream.hpp  ShuntingYard.cpp  ShuntingYard.hpp  StreamLog.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp  TokenStreamTest.cpp  ex_base.cpp
lm/ch07/: ASTNode.cpp  ASTNode.hpp  CMakeLists.txt  EvaluatorTest-ch07-extensions.cpp  Optional.hpp  ShuntingYard.cpp  ShuntingYard.hpp  ShuntingYardTest.cpp  SymbolTable.hpp
lm/chunk-eater/: CMakeLists.txt  main.cpp
lm/crtp-explore/: CMakeLists.txt  main.cpp
lm/dprog/: CMakeLists.txt
lm/dprog/ch290/: CMakeLists.txt  DecrementAndJumpIfNonZeroInstructionBuilder.cpp  DecrementAndJumpIfNonZeroInstructionBuilder.hpp  DecrementAndJumpInstructionBuilder.cpp  DecrementAndJumpInstructionBuilder.hpp  DecrementAndJumpInstructionBuilderTest.cpp  Instruction.hpp  InstructionBuilder.cpp  InstructionBuilder.hpp  InstructionBuilderCombinator.cpp  InstructionBuilderCombinator.hpp  InstructionBuilderCombinatorTest.cpp  InstructionLexer.cpp  InstructionLexer.hpp  InstructionLexerTest.cpp  LoadInstructionBuilder.cpp  LoadInstructionBuilder.hpp  LoadInstructionBuilderTest.cpp  OutputInstructionBuilder.cpp  OutputInstructionBuilder.hpp  Processor.cpp  Processor.hpp  ProcessorTest.cpp  RotateLeftCyclicInstructionBuilder.cpp  RotateLeftCyclicInstructionBuilder.hpp  RotateLeftCyclicInstructionBuilderTest.cpp  RotateRightCyclicInstructionBuilder.cpp  (+8 more)
lm/fmtgp/: CMakeLists.txt  Ch04.cpp  Ch04.hpp  Ch04.test.cpp  Ch07.cpp  Ch07.hpp  Ch07.test.cpp  Ch11.cpp  Ch11.hpp  Ch11.test.cpp  Ch12.bench.cpp  Ch12.cpp  Ch12.hpp  Ch12.test.cpp  Rational.cpp  Rational.hpp  Rational.test.cpp  gcd.cpp  gcd.hpp  gcd.test.cpp  main.cpp  multibyte_number.cpp  multibyte_number.hpp  multibyte_number.test.cpp  rsa.cpp  rsa.hpp  rsa.test.cpp
lm/game01/: Board.cpp  Board.hpp  CMakeLists.txt  World.cpp  World.hpp  main.cpp
lm/game02/: Board.cpp  Board.hpp  CMakeLists.txt  HiggsField.cpp  HiggsField.hpp  MassRegistry.cpp  MassRegistry.hpp  PhysicalEntity.cpp  PhysicalEntity.hpp  World.cpp  World.hpp  main.cpp
lm/game03/: Board.cpp  Board.hpp  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  LogicalEntity.cpp  LogicalEntity.hpp  PhysicalEntity.cpp  PhysicalEntity.hpp  PointMass.cpp  PointMass.hpp  QuantumField.cpp  QuantumField.hpp  World.cpp  World.hpp  main.cpp  sfml_help.hpp
lm/range-playground/: CMakeLists.txt  plaything_1.cpp
lm/sicp/: Chapter1.scm
lz/: .clang_complete  CMakeLists.txt
lz/290_blinking_leds/: CMakeLists.txt  input.txt  main.cpp
lz/ch00/: CMakeLists.txt  main.cpp  ut.cpp
lz/ut/: CMakeLists.txt
mb/Leds/: CMakeLists.txt  InputParser.cpp  InputParser.hpp  InstructionConverter.cpp  InstructionConverter.hpp  InstructionParser.cpp  InstructionParser.hpp  InstructionPreparer.cpp  InstructionPreparer.hpp  InstructionToLedBlinkConverter.cpp  InstructionToLedBlinkConverter.hpp  InstructionToLedConverter.hpp  LedBlinker.cpp  LedBlinker.hpp  LedCommon.cpp  LedCommon.hpp  LedSequence.txt  LedsUT.cpp  main.cpp
mb/ch04/: .goutputstream-IAFGKY  CMakeLists.txt  MB_04_02.cpp  MB_04_02.hpp  MB_04_02_main.cpp  MB_04_03.cpp  MB_04_03.hpp  MB_04_03_main.cpp  MB_04_05.cpp  MB_04_05.hpp  MB_04_05_main.cpp  MB_04_08.cpp  MB_04_08.hpp  MB_04_08_main.cpp  MB_04_10.cpp  MB_04_10.hpp  MB_04_15.cpp  MB_04_16.cpp  MB_04_18.cpp  MB_04_UT.cpp  NGR_04_UT.cpp  Test.cpp
mb/ch05/: CMakeLists.txt  MB_05_02.cpp  MB_05_02.hpp  MB_05_UT.cpp  NGR_05_02_01.cpp  NGR_05_02_01.hpp  NGR_05_UT.cpp
mb/ch06/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  ITokenStream.hpp  MB_06.cpp  MB_06_00.cpp  MB_06_00.hpp  MockTokenStream.cpp  MockTokenStream.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp  UTs.cpp
mb/common/: CMakeLists.txt  Common.cpp  Common.hpp  Common_UT.cpp  MB_Common.cpp  MB_Common.hpp  MB_Common_UT.cpp
td/challenge260/: CMakeLists.txt  Instruction.hpp  InstructionLexer.cpp  InstructionLexer.hpp  InstructionLexerTest.cpp  InstructionParser.cpp  InstructionParser.h  InstructionParser.hpp  InstructionParserTest.cpp  LedController.cpp  LedController.hpp  LedControllerTest.cpp  SemanticAnalyser.cpp  SemanticAnalyser.hpp  SemanticAnalyserTest.cpp  Token.hpp  dummyTest.cpp  main.cpp
(+108 files in other folders)
